--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(cpp-algorithm-toolkit)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(union_find_p3367 tests/data_structure/union_find_test/P3367.cpp)
+add_executable(linear_basis_test tests/data_structure/linear_basis_test/NC_120563_B.cpp)
 
